Initial Setup for new blog post

--- a/personal-website/public/404.html
+++ b/personal-website/public/404.html
@@ -177,7 +177,7 @@
                         <line x1="5" y1="12" x2="11" y2="18" />
                         <line x1="5" y1="12" x2="11" y2="6" />
                     </svg>
-                    Take me home
+                    Take me home!
                 </a>
             </div>
         </div>
