--- a/personal-website/public/photography/index.html
+++ b/personal-website/public/photography/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>
         
-        Solution Coder - Anil&#39;s Personal Portfolio
+        Anil Dewani
         
     </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta11/dist/css/tabler.min.css">
@@ -21,6 +21,11 @@
         --tblr-font-sans-serif: 'Inter';
     }
 </style>
+
+<script>
+    !function (t, e) { var o, n, p, r; e.__SV || (window.posthog = e, e._i = [], e.init = function (i, s, a) { function g(t, e) { var o = e.split("."); 2 == o.length && (t = t[o[0]], e = o[1]), t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } } (p = t.createElement("script")).type = "text/javascript", p.async = !0, p.src = s.api_host + "/static/array.js", (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(p, r); var u = e; for (void 0 !== a ? u = e[a] = [] : a = "posthog", u.people = u.people || [], u.toString = function (t) { var e = "posthog"; return "posthog" !== a && (e += "." + a), t || (e += " (stub)"), e }, u.people.toString = function () { return u.toString(1) + ".people (stub)" }, o = "capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags".split(" "), n = 0; n < o.length; n++)g(u, o[n]); e._i.push([i, s, a]) }, e.__SV = 1) }(document, window.posthog || []);
+    posthog.init('phc_4gqVuOVIDhBzWXAnyRDJAfc6ULJMw73P62nSSgnQ3Bo', { api_host: 'https://app.posthog.com' })
+</script>
 </head>
 
 <body class="layout-boxed theme-light">
@@ -523,6 +528,25 @@
 
         })
     })
+</script>
+
+
+
+<script>
+        (function (d, t) {
+            var BASE_URL = "https://app.chatwoot.com";
+            var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
+            g.src = BASE_URL + "/packs/js/sdk.js";
+            g.defer = true;
+            g.async = true;
+            s.parentNode.insertBefore(g, s);
+            g.onload = function () {
+                window.chatwootSDK.run({
+                    websiteToken: 'j3YaZPH4a56tfHRAS2nCdXsu',
+                    baseUrl: BASE_URL
+                })
+            }
+        })(document, "script");
 </script>
         <footer class="footer footer-transparent d-print-none">
     <div class="container-xl">
